--- a/templates/searchAndResult.html
+++ b/templates/searchAndResult.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <title>IQ1でも見れるOCW</title>
 </head>
 <body>
-    <h1>IQ1でも見れるOCW</h1>
+    <p class="display-1">IQ1でも見れるOCW</p>
     <div>
-        <input type="search" value="{{default_input_value}}">
+        <input type="search" class="form-control" placeholder="{{default_input_value}}">
     </div>
 
     このOCW(偽物)はIQが1でも見れることを目標にしています
