refs #2 トップページのUIを作成
なくてもいい(書きたければ詳細を)

--- a/templates/topPage.html
+++ b/templates/topPage.html
@@ -1,40 +1,54 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
     <head>
-        <meta charset="UTF-8">
-        <title>IQ1でも見れるOCW</title>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+        <meta charset="UTF-8" name="viewport" >
+        <meta name="viewport" content="width=device-width,initial-scale=1.0">
+        <title>IQ1でもわかるOCW</title>
+        <!-- BootStrap4 -->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
     </head>
     <body>
-        <!-- ナビゲーションバー -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-                <a class="navbar-brand" href="#">IQが1でもわかるOCW</a>
-                <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="http://www.ocw.titech.ac.jp">東工大OCW</a>
-                    </li>
-                </ul>
-                <!--
-                <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                </form>
-                -->
-            </div>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+            <!-- navbar-dark : 文字色白 , bg-dark : 背景黒 -->
+            <a class="navbar-brand" href="#">IQ1でもわかるOCW</a>
+            <!-- TODO 必要ならばトグルメニューを追加 -->
         </nav>
 
+        <div class="container">
+            <div class="pt-5 pb-5">
+                <div class="p-3 pt-5">
+                    <h3>授業名で検索</h3>
+                </div>
+                <div class="p-3">
+                    <form>
+                        <div class="form-group">
+                            <label for="">授業名</label>
+                            <input type="lecture" class="form-control">
+                        </div>
+                        <button type="submit" class="btn btn-dark float-right">検索</button>
+                    </form>
+                </div>
+            </div>
+        </div>
 
 
 
+        <div class="container">
+            <div class="pt-5 pb-5">
+                <div class="p-3 pt-5">
+                    <h3>所属から選択</h3>
+                </div>
+                <div class="p-3">
+                    <ul class="list-group">
+                        <li class="list-group-item">情報理工学院</li>
+                        <li class="list-group-item">情報理工学院以外を知らない1</li>
+                        <li class="list-group-item">情報理工学院以外を知らない2</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
