refs #2 学院名修正

--- a/templates/topPage.html
+++ b/templates/topPage.html
@@ -43,9 +43,13 @@
                 </div>
                 <div class="p-3">
                     <ul class="list-group">
+                        <li class="list-group-item">理学院</li>
+                        <li class="list-group-item">工学院</li>
+                        <li class="list-group-item">物質理工学院</li>
                         <li class="list-group-item">情報理工学院</li>
-                        <li class="list-group-item">情報理工学院以外を知らない1</li>
-                        <li class="list-group-item">情報理工学院以外を知らない2</li>
+                        <li class="list-group-item">生命理工学院</li>
+                        <li class="list-group-item">環境・社会理工学院</li>
+                        <li class="list-group-item">その他</li>
                     </ul>
                 </div>
             </div>
