refs #4 /lectureで講義詳細画面を割り当て

--- a/templates/lecture.html
+++ b/templates/lecture.html
@@ -20,12 +20,12 @@
         <div class="container">
             <div class="pt-5 pb-5">
                 <div class="p-3 pt-5">
-                    <h3> ここに講義名 </h3>
+                    <h3> {{name}} </h3>
                 </div>
                 <div class="p-3 pt-3">
-                    <h6> 開講クォーター : 1000000009Q </h6>
-                    <h6> 教員名 : ぽいぽい </h6>
-                    <h6> 開講元 : ここ </h6>
+                    <h6> 開講クォーター : {{quarter}}</h6>
+                    <h6> 教員名 : {{teacher}} </h6>
+                    <h6> 開講元 : {{department}} </h6>
                     <h6> 開講時間 </h6>
                     <h6> 講義室 </h6>
                     <h6> 単位数 </h6>
