refs #2 TopPageから検索結果へのページ遷移を追加

--- a/templates/topPage.html
+++ b/templates/topPage.html
@@ -23,10 +23,10 @@
                     <h3>授業名で検索</h3>
                 </div>
                 <div class="p-3">
-                    <form>
+                    <form action="/abc" method="GET">
                         <div class="form-group">
                             <label for="">授業名</label>
-                            <input type="lecture" class="form-control">
+                            <input type="lecture" class="form-control" name="lectureName">
                         </div>
                         <button type="submit" class="btn btn-dark float-right">検索</button>
                     </form>
