--- a/templates/lecture.html
+++ b/templates/lecture.html
@@ -1,21 +1,10 @@
-<!DOCTYPE html>
-<html lang="ja">
-    <head>
-        <meta charset="UTF-8" name="viewport" >
-        <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <title>IQ1でもわかるOCW</title>
-        <!-- BootStrap4 -->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
-    </head>
-    <body>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-            <!-- navbar-dark : 文字色白 , bg-dark : 背景黒 -->
-            <a class="navbar-brand" href="#">IQ1でもわかるOCW</a>
-            <!-- TODO 必要ならばトグルメニューを追加 -->
-        </nav>
+{% extends "base.html" %}
+
+{% block title %}
+{{ name }} 詳細情報
+{% endblock %}
+
+{% block body %}
 
         <div class="container">
             <div class="pt-5 pb-5">
@@ -38,5 +27,5 @@
                 </div>
             </div>
         </div>
-    </body>
-</html>
+
+{% endblock %}
