--- a/templates/department.html
+++ b/templates/department.html
@@ -16,5 +16,10 @@
     </head>
 
     <body>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+            <!-- navbar-dark : 文字色白 , bg-dark : 背景黒 -->
+            <a class="navbar-brand" href="#">IQ1でもわかるOCW > {{department_name}}</a>
+            <!-- TODO 必要ならばトグルメニューを追加 -->
+        </nav>
     </body>
 </html>
