--- a/templates/topPage.html
+++ b/templates/topPage.html
@@ -44,25 +44,25 @@
                 <div class="p-3">
                     <ul class="list-group">
                         <li class="list-group-item">
-                            <a href="http://localhost:8000/department?dep=rigakuin"> 理学院 </a>
+                            <a href="http://160.16.213.208/department?dep=rigakuin"> 理学院 </a>
                         </li>
                         <li class="list-group-item">
-                            <a href="http://localhost:8000/department?dep=kougakuin"> 工学院 </a>
+                            <a href="http://160.16.213.208/department?dep=kougakuin"> 工学院 </a>
                         </li>
                         <li class="list-group-item">
-                            <a href="http://localhost:8000/department?dep=bussitsu"> 物質理工学院 </a>
+                            <a href="http://160.16.213.208/department?dep=bussitsu"> 物質理工学院 </a>
                         </li>
                         <li class="list-group-item">
-                            <a href="http://localhost:8000/department?dep=jouhou"> 情報理工学院 </a>
+                            <a href="http://160.16.213.208/department?dep=jouhou"> 情報理工学院 </a>
                         </li>
                         <li class="list-group-item">
-                            <a href="http://localhost:8000/department?dep=seimei"> 生命理工学院 </a>
+                            <a href="http://160.16.213.208/department?dep=seimei"> 生命理工学院 </a>
                         </li>
                         <li class="list-group-item">
-                            <a href="http://localhost:8000/department?dep=kankyo"> 環境・社会理工学院 </a>
+                            <a href="http://160.16.213.208/department?dep=kankyo"> 環境・社会理工学院 </a>
                         </li>
                         <li class="list-group-item">
-                            <a href="http://localhost:8000/department?dep=sonota"> その他 </a>
+                            <a href="http://160.16.213.208/department?dep=sonota"> その他 </a>
                         </li>
                     </ul>
                 </div>
