--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
             <!-- navbar-dark : 文字色白 , bg-dark : 背景黒 -->
-            <a class="navbar-brand" href="#">IQ1でもわかるOCW</a>
+            <a class="navbar-brand" href="/">IQ1でもわかるOCW</a>
             <!-- TODO 必要ならばトグルメニューを追加 -->
         </nav>
         {% block body %}
