--- a/templates/department.html
+++ b/templates/department.html
@@ -19,7 +19,7 @@
         <!-- トップ -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
             <!-- navbar-dark : 文字色白 , bg-dark : 背景黒 -->
-            <a class="navbar-brand" href="#">IQ1でもわかるOCW > {{department_name}}</a>
+            <a class="navbar-brand" href="/">IQ1でもわかるOCW > {{department_name}}</a>
             <!-- TODO 必要ならばトグルメニューを追加 -->
         </nav>
 
