--- a/templates/department.html
+++ b/templates/department.html
@@ -14,22 +14,43 @@
                 </div>
 
                 <div class="pt-1 pb-3">
-                    <h4> 開講元 </h4>
-                    {% for item in opening_department_list %}
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" id="{{ item }}" checked="checked" onchange="toggleVisibility(id, 'data-opening_department')">
-                        <label class="form-check-label"> {{ item }} </label>
+                    <div class="card">
+                        <div class="card-body">
+                            <h4 class="card-title"> 開講元 </h4>
+                            <div>
+                                {% for item in opening_department_list %}
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" name="opening_department" type="checkbox" id="{{ item }}" checked="checked" onchange="checkboxListener(id, 'data-opening_department')">
+                                    <label class="form-check-label"> {{ item }} </label>
+                                </div>
+                                {% endfor %}
+                            </div>
+                            <div class="btn-group float-right pt-2">
+                                <button class="btn btn-outline-primary" onclick="changeAllCheckboxes('opening_department', true)">全て選択</button>
+                                <button class="btn btn-outline-primary" onclick="changeAllCheckboxes('opening_department', false)">全て選択解除</button>
+                            </div>
+                        </div>
                     </div>
-                    {% endfor %}
                 </div>
-                <div class="pt-1 pb-4">
-                    <h4> 番台 </h4>
-                    {% for item in series_list %}
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" id="{{ item }}" checked="checked" onchange="toggleVisibility(id, 'data-series')">
-                        <label class="form-check-label"> {{ item }} </label>
+
+                <div class="pt-1 pb-3">
+                    <div class="card">
+                        <div class="card-body">
+                            <h4 class="card-title"> 番台 </h4>
+                            <div>
+                                {% for item in series_list %}
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" name="series" type="checkbox" id="{{ item }}" checked="checked" onchange="checkboxListener(id, 'data-series')">
+                                    <label class="form-check-label"> {{ item }} </label>
+                                </div>
+                                {% endfor %}
+                            </div>
+                            <div class="btn-group float-right pt-2">
+                                <button class="btn btn-outline-primary" onclick="changeAllCheckboxes('series', true)">全て選択</button>
+                                <button class="btn btn-outline-primary" onclick="changeAllCheckboxes('series', false)">全て選択解除</button>
+                            </div>
+                        </div>
                     </div>
-                    {% endfor %}
                 </div>
 
                 <div class="table-responsive">
@@ -42,7 +63,7 @@
                                 <th> {{ result_head.teacher }} </th>
                             </tr>
                         </thead>
-                        <tbody>
+                        <tbody id="tbody-lecture"> <!-- The attribute 'id' is used in changeAllCheckboxes. -->
                             {% for item in result_content %}
                             <tr class="{{ item.opening_department }} {{ item.series }}" style="" data-series="true" data-opening_department="true">
                                 <td> {{ item.series }} </td>
@@ -57,22 +78,36 @@
             </div>
         </div>
         <script>
-            function toggleVisibility(_id, data_type) {
-                console.log(_id);
-                var rows = document.getElementsByClassName(_id)
+            function changeVisibility(lecture_tuple) {
+                if (lecture_tuple.getAttribute('data-series') === 'true' && lecture_tuple.getAttribute('data-opening_department') === 'true')
+                    lecture_tuple.setAttribute("style", '');
+                else
+                    lecture_tuple.setAttribute("style", 'display: none;');
+            }
 
+            function checkboxListener(_id, data_type) {
+                var rows = document.getElementsByClassName(_id);
+
+                var value = (document.getElementById(_id).checked) ? 'true' : 'false';
                 for (var row of rows) {
-                    series = row.getAttribute(data_type);
-                    if (series === 'true')
-                        row.setAttribute(data_type, 'false');
-                    else
-                        row.setAttribute(data_type, 'true');
+                    row.setAttribute(data_type, value);
+                    changeVisibility(row);
+                }
+            }
 
-                    style = row.getAttribute("style");
-                    if (row.getAttribute('data-series') === 'true' && row.getAttribute('data-opening_department') === 'true')
-                        row.setAttribute("style", '');
-                    else
-                        row.setAttribute("style", 'display: none;');
+            function changeAllCheckboxes(className, bool_value) {
+                var checkboxes = document.getElementsByName(className);
+
+                for (var checkbox of checkboxes) {
+                    checkbox.checked = bool_value;
+                }
+                var rows = document.getElementById('tbody-lecture').getElementsByTagName('tr');
+
+                var data_value = (bool_value) ? 'true' : 'false';
+                var data_type = 'data-' + className;
+                for (var row of rows) {
+                    row.setAttribute(data_type, data_value);
+                    changeVisibility(row);
                 }
             }
         </script>
