refs #10 学院毎の検索結果に講義室と曜日を表示

--- a/templates/department.html
+++ b/templates/department.html
@@ -61,6 +61,7 @@
                                 <th> {{ result_head.lecname }} </th>
                                 <th> {{ result_head.opening_department }} </th>
                                 <th> {{ result_head.teacher }} </th>
+                                <th> {{ result_head.dateroom }} </th>
                             </tr>
                         </thead>
                         <tbody id="tbody-lecture"> <!-- The attribute 'id' is used in changeAllCheckboxes. -->
@@ -70,6 +71,7 @@
                                 <td> <a href="{% url 'app:lecture' %}?code={{item.code}}">{{item.lecname}}</a></td>
                                 <td> {{ item.opening_department }} </td>
                                 <td> {{ item.teacher }} </td>
+                                <td> {{ item.dateroom }} </td>
                             </tr>
                             {% endfor %}
                         </tbody>
