--- a/templates/topPage.html
+++ b/templates/topPage.html
@@ -12,7 +12,7 @@ IQ1でもわかるOCW
                     <h3>授業名で検索</h3>
                 </div>
                 <div class="p-3">
-                    <form action="/abc" method="GET">
+                    <form action="/result" method="GET">
                         <div class="form-group">
                             <label for="">授業名</label>
                             <input type="lecture" class="form-control" name="lectureName">
