refs #16: Separated JS from templates/department.html.

--- a/templates/department.html
+++ b/templates/department.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block title %}
 {{ gakuin_name }}
@@ -81,39 +82,6 @@
                 </div>
             </div>
         </div>
-        <script>
-            function changeVisibility(lecture_tuple) {
-                if (lecture_tuple.getAttribute('data-series') === 'true' && lecture_tuple.getAttribute('data-opening_department') === 'true')
-                    lecture_tuple.setAttribute("style", '');
-                else
-                    lecture_tuple.setAttribute("style", 'display: none;');
-            }
-
-            function checkboxListener(_id, data_type) {
-                var rows = document.getElementsByClassName(_id);
-
-                var value = (document.getElementById(_id).checked) ? 'true' : 'false';
-                for (var row of rows) {
-                    row.setAttribute(data_type, value);
-                    changeVisibility(row);
-                }
-            }
-
-            function changeAllCheckboxes(className, bool_value) {
-                var checkboxes = document.getElementsByName(className);
-
-                for (var checkbox of checkboxes) {
-                    checkbox.checked = bool_value;
-                }
-                var rows = document.getElementById('tbody-lecture').getElementsByTagName('tr');
-
-                var data_value = (bool_value) ? 'true' : 'false';
-                var data_type = 'data-' + className;
-                for (var row of rows) {
-                    row.setAttribute(data_type, data_value);
-                    changeVisibility(row);
-                }
-            }
-        </script>
+        <script src="{% static 'js/department.js' %}"></script>
 
 {% endblock %}
