--- a/templates/resultTable.html
+++ b/templates/resultTable.html
@@ -13,7 +13,7 @@
     <tbody id="tbody-lecture"> <!-- The attribute 'id' is used in changeAllCheckboxes. -->
         {% for item in result_content %}
         <tr class="d-sm-flex {{ item.opening_department }} {{ item.series }}" data-series="true" data-opening_department="true">
-            <td class='col-sm-5 col-lg-3 table-secondary'> <a href="{% url 'app:lecture' %}?code={{item.code}}">{{item.lecname}}</a></td>
+            <td class='col-sm-5 col-lg-3 color-sm'> <a href="{% url 'app:lecture' %}?code={{item.code}}">{{item.lecname}}</a></td>
             <td class='col-sm-1 col-lg-1'> {{ item.quarter}} </td>
             <td class='col-sm-5 col-lg-3'> {{ item.dateroom }} </td>
             <td class='d-none d-sm-block col-sm-1 col-lg-1'> {{ item.series }} </td>
